--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,9 @@ opt-level = 3
 
 [dependencies]
 bevy = { version = "0.13.2", features = ["dynamic_linking"] }
+
+
+[[example]]
+name = "hello_world"
+path = "example/test.rs"
+doc-scrape-examples = true
