--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.bin filter=lfs diff=lfs merge=lfs -text
 *.ktx2 filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+*.ttf filter=lfs diff=lfs merge=lfs -text
