--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,17 @@ opt-level = 1
 [profile.dev.package."*"]
 opt-level = 3
 
+[profile.release]
+lto = true
+opt-level = 3
+codegen-units = 1
+incremental = false
+debug = false
+
 [dependencies]
-bevy = { version = "0.13.2", features = ["dynamic_linking"] }
+bevy = { version = "0.14.0", features = ["dynamic_linking"] }
+iyes_perf_ui = "0.3.0"
+rand = "0.8.5"
 
 [[bin]]
 name = "shooter_test"
