--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ incremental = false
 debug = false
 
 [dependencies]
-bevy = { version = "0.14.0", features = ["dynamic_linking"] }
+bevy = { version = "0.14.1", features = ["dynamic_linking"] }
 iyes_perf_ui = "0.3.0"
 rand = "0.8.5"
 
@@ -49,6 +49,14 @@ name = "model3d"
 path = "src/bin/model/model3d.rs"
 test = false
 bench = false
+
+
+[[bin]]
+name = "voxel"
+path = "src/bin/voxel/voxel.rs"
+test = false
+bench = false
+
 
 [[example]]
 name = "hello_world"
