--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,11 @@ debug = false
 bevy = { version = "0.14.1", features = ["dynamic_linking"] }
 iyes_perf_ui = "0.3.0"
 rand = "0.8.5"
+# For 2D applications:
+avian2d = "0.1"
+# For 3D applications:
+avian3d = "0.1"
+
 
 [[bin]]
 name = "shooter_test"
