gizmos jump rewrite

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ rand = "0.8.5"
 # For 2D applications:
 avian2d = "0.1"
 # For 3D applications:
-avian3d = "0.1"
+avian3d = { version = "0.1", features = ["debug-plugin"] }
 
 
 [[bin]]
