--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.ktx2 filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.ttf filter=lfs diff=lfs merge=lfs -text
+*.ogg filter=lfs diff=lfs merge=lfs -text
