--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,11 +22,11 @@ incremental = false
 debug = false
 
 [dependencies]
-bevy = { version = "0.15.0"}#, features = ["dynamic_linking"] }
+bevy = { version = "0.15.0" }#, features = ["dynamic_linking"] }
 iyes_perf_ui = "0.3.0"
 rand = "0.8.5"
 # For 2D applications:
-avian2d = { git = "https://github.com/Jondolf/avian", branch = "main" }   
+avian2d = { git = "https://github.com/Jondolf/avian", branch = "main" }
 # For 3D applications:
 avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }
 bevy_egui = "0.31.1"
@@ -37,7 +37,8 @@ members = [
     "projects/bevy_ecs_test",
     "projects/cards",
     "projects/dialog",
-    "projects/shooter"]
+    "projects/shooter"
+]
 
 
 [[bin]]
