--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,9 @@ bevy = { version = "0.15.0" }#, features = ["dynamic_linking"] }
 iyes_perf_ui = "0.3.0"
 rand = "0.8.5"
 # For 2D applications:
-avian2d = { git = "https://github.com/Jondolf/avian", branch = "main" }
+avian2d =  { version = "0.2.0" }
 # For 3D applications:
-avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }
+avian3d = { version = "0.2.0" }
 bevy_egui = "0.31.1"
 
 
@@ -37,7 +37,8 @@ members = [
     "projects/bevy_ecs_test",
     "projects/cards",
     "projects/dialog",
-    "projects/shooter"
+    "projects/shooter",
+    "projects/character_controller_3d"
 ]
 
 
@@ -52,6 +53,13 @@ name = "rpg"
 path = "src/bin/rpg/rpg.rs"
 test = false
 bench = false
+
+[[bin]]
+name = "mines"
+path = "src/bin/mines/mines.rs"
+test = false
+bench = false
+
 
 
 [[bin]]
