--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ incremental = false
 debug = false
 
 [dependencies]
-bevy = { version = "0.15.0" }#, features = ["dynamic_linking"] }
+bevy = { version = "0.15.0", features = ["webgl2"] }  #"dynamic_linking"
 iyes_perf_ui = "0.3.0"
 rand = "0.8.5"
 # For 2D applications:
@@ -46,6 +46,18 @@ members = [
 [[bin]]
 name = "platformer"
 path = "src/bin/platformer/platformer.rs"
+test = false
+bench = false
+
+[[bin]]
+name = "post_process"
+path = "src/bin/post_process/main.rs"
+test = false
+bench = false
+
+[[bin]]
+name = "custom_material"
+path = "src/bin/custom_material/main.rs"
 test = false
 bench = false
 
