--- a/.gitattributes
+++ b/.gitattributes
@@ -6,4 +6,4 @@
 *.ogg filter=lfs diff=lfs merge=lfs -text
 *.ttf filter=lfs diff=lfs merge=lfs -text
 *.glb filter=lfs diff=lfs merge=lfs -text
-*.fbx filter=lfs diff=lfs merge=lfs -text
+*.fbx `filter=lfs diff=lfs merge=lfs -text
