--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ members = [
     "projects/platformer",
     "projects/shaders_test",
     "projects/survival2d",
+    "projects/animation_test",
 ]
 
 
