--- a/projects/animation_test/Cargo.toml
+++ b/projects/animation_test/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.15.0", features = ["dynamic_linking"] }
+rand = "0.8.5"
+rand_chacha = "0.3.1"
