--- a/projects/character_controller_3d/Cargo.toml
+++ b/projects/character_controller_3d/Cargo.toml
@@ -3,6 +3,11 @@ name = "character_controller_3d"
 version = "0.1.0"
 edition = "2021"
 
+[profile.dev]
+opt-level = 1
+[profile.dev.package."*"]
+opt-level = 3
+
 [dependencies]
-bevy = { version = "0.15.0", features = ["dynamic_linking"] }
+bevy = { version = "0.15.0" }#, features = ["dynamic_linking"] }
 avian3d = {version = "0.2.0"}
