--- a/projects/arkanoid/Cargo.toml
+++ b/projects/arkanoid/Cargo.toml
@@ -1,14 +1,9 @@
 [package]
-name = "survival2d"
+name = "arkanoid"
 version = "0.1.0"
 edition = "2021"
-
-[profile.dev]
-opt-level = 3
-debug = true
 
 [dependencies]
 #avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }
 bevy = { version = "0.15.0", features = ["dynamic_linking"] }
 avian3d = { version = "0.2.0" }
-rand = "0.8.5"
