--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,16 +21,16 @@ codegen-units = 1
 incremental = false
 debug = false
 
-[dependencies]
-bevy = { version = "0.15.1", features = ["webgl2", "dynamic_linking"] }
-iyes_perf_ui = "0.3.0"
-rand = "0.8.5"
-# For 2D applications:
-avian2d = { version = "0.2.0" }
-# For 3D applications:
-avian3d = { version = "0.2.0" }
-bevy_egui = "0.31.1"
-rand_chacha = "0.3.1"
+#[dependencies]
+#bevy = { version = "0.15.1", features = ["webgl2", "dynamic_linking"] }
+#iyes_perf_ui = "0.3.0"
+#rand = "0.8.5"
+## For 2D applications:
+#avian2d = { version = "0.2.0" }
+## For 3D applications:
+#avian3d = { version = "0.2.0" }
+#bevy_egui = "0.31.1"
+#rand_chacha = "0.3.1"
 
 
 [workspace]
@@ -46,7 +46,8 @@ members = [
     "projects/survival2d",
     "projects/animation_test",
     "projects/turn_based",
-    "projects/arkanoid"
+    "projects/arkanoid",
+#    "projects/underpotato",
 ]
 
 [[bin]]
