--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,8 @@ default-run = "rpg"
 name = "sandbox_bevy"
 version = "0.1.0"
 edition = "2021"
-
+resolver = "3"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-# Enable a small amount of optimization in debug mode
-[profile.dev]
-opt-level = 1
 
 # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
 [profile.dev.package."*"]
@@ -21,16 +17,16 @@ codegen-units = 1
 incremental = false
 debug = false
 
-#[dependencies]
-#bevy = { version = "0.15.1", features = ["webgl2", "dynamic_linking"] }
-#iyes_perf_ui = "0.3.0"
-#rand = "0.8.5"
-## For 2D applications:
-#avian2d = { version = "0.2.0" }
-## For 3D applications:
-#avian3d = { version = "0.2.0" }
-#bevy_egui = "0.31.1"
-#rand_chacha = "0.3.1"
+[dependencies]
+bevy = { version = "0.15.1", features = ["webgl2", "dynamic_linking"] }
+iyes_perf_ui = "0.3.0"
+rand = "0.8.5"
+# For 2D applications:
+avian2d = { version = "0.2.0" }
+# For 3D applications:
+avian3d = { version = "0.2.0" }
+bevy_egui = "0.31.1"
+rand_chacha = "0.3.1"
 
 
 [workspace]
@@ -47,7 +43,7 @@ members = [
     "projects/animation_test",
     "projects/turn_based",
     "projects/arkanoid",
-#    "projects/underpotato",
+    "projects/underpotato",
 ]
 
 [[bin]]
